# cybergestion-msix

./: README.md
.github/workflows/: local-msix.yml
CyberGestion/: index.html
JVente-app/src-tauri/: Cargo.toml  tauri.conf.json
JVente-app/src-tauri/icons/: icon.icns
JVente-app/src-tauri/src/: main.rs
