[package]
name = "jvente"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "=1.0.115"
serde = { version = "=1.0.200", features = ["derive"] }
tauri = { version = "=1.8.3", features = ["api-all"] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
codegen-units = 1